--- a/fa2024/lectures/lecture-28.qmd
+++ b/fa2024/lectures/lecture-28.qmd
@@ -45,8 +45,8 @@ This Monday - 12/9 - by Midnight
 No late work will be accepted.
 :::
 
-{{< include "../../topics/_triggers.qmd" >}}
-{{< include "../../topics/_views.qmd" >}}
+{{< include "../../topics/_sql-triggers.qmd" >}}
+{{< include "../../topics/_sql-views.qmd" >}}
 {{< include "../../topics/_sql-injection.qmd" >}}
 
 ## 
