--- a/fa2024/lectures/lecture-16.qmd
+++ b/fa2024/lectures/lecture-16.qmd
@@ -36,8 +36,8 @@ lecture_topics = [
 
 {{< include "../../topics/_connecting-to-dbms.qmd" >}}
 {{< include "../../topics/_mysql-passwords.qmd" >}}
-{{< include "../../topics/_intro-to-sql.qmd" >}}
+{{< include "../../topics/_sql-intro.qmd" >}}
 {{< include "../../topics/_mysql-dbms.qmd" >}}
-{{< include "../../topics/_select-statement.qmd" >}}
+{{< include "../../topics/_sql-selects.qmd" >}}
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
