--- a/fa2025/details/week-13-details.qmd
+++ b/fa2025/details/week-13-details.qmd
@@ -28,8 +28,26 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 ```
 
 <p class="lead">Welcome to a new week!</p>
-
 *Details will be updated closer to the week.*
+
+<!-- overview-block-begin -->
+
+<p class="lead">SQL SELECTS - full tilt boogie! Subqueries and WITH.  Views and Indexes.</p>
+    
+<!-- overview-block-end -->
+
+
+<!-- deliverables-block-begin -->
+#### Things to do this week
+
+
+[Homework 10 - More SQL](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241143) More SQL
+
+<!-- deliverables-block-end -->
+
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
+
 
 
 ```{python}
