--- a/fa2025/details/week-11-details.qmd
+++ b/fa2025/details/week-11-details.qmd
@@ -28,8 +28,26 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 ```
 
 <p class="lead">Welcome to a new week!</p>
-
 *Details will be updated closer to the week.*
+
+<!-- overview-block-begin -->
+
+<p class="lead">This week we expand our DDL by introducing keys and more.  Joins are next on the table (heh heh) as we explore real POWAH of databases!</p>
+    
+<!-- overview-block-end -->
+
+
+<!-- deliverables-block-begin -->
+#### Things to do this week
+
+
+[Homework 8 - SQL Funhouse](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241140) explores the SELECT statement and all the different ways to gain insights from raw data using SQL.
+
+<!-- deliverables-block-end -->
+
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
+
 
 
 ```{python}
