--- a/fa2025/details/week-17-details.qmd
+++ b/fa2025/details/week-17-details.qmd
@@ -28,8 +28,26 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 ```
 
 <p class="lead">Welcome to a new week!</p>
-
 *Details will be updated closer to the week.*
+
+<!-- overview-block-begin -->
+
+<p class="lead">This is the last week of school. No class on Monday! Keep focused on finishing out your semester-long project!</p>
+    
+<!-- overview-block-end -->
+
+
+<!-- deliverables-block-begin -->
+#### Things to do this week
+
+
+[Survey 2 - Course evaluation](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241132) - course evaluations are important.  Submit a pic of your submission screen for points!  Thank you for completing the survey!
+
+<!-- deliverables-block-end -->
+
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
+
 
 
 ```{python}
