--- a/fa2025/details/week-18-details.qmd
+++ b/fa2025/details/week-18-details.qmd
@@ -28,8 +28,21 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 ```
 
 <p class="lead">Welcome to a new week!</p>
-
 *Details will be updated closer to the week.*
+
+<!-- overview-block-begin -->
+
+<p class="lead">Finals week and semester cleanup</p>
+    
+<!-- overview-block-end -->
+
+
+<!-- deliverables-block-begin -->
+<!-- deliverables-block-end -->
+
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
+
 
 
 ```{python}
