--- a/fa2025/details/week-4-details.qmd
+++ b/fa2025/details/week-4-details.qmd
@@ -28,8 +28,29 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 ```
 
 <p class="lead">Welcome to a new week!</p>
-
 *Details will be updated closer to the week.*
+
+<!-- overview-block-begin -->
+
+<p class="lead">How do we represent entities and relations on the computer?  By using the relational model!</p>
+    
+<!-- overview-block-end -->
+
+
+<!-- deliverables-block-begin -->
+#### Things to do this week
+
+
+[Discussion 2 - Relational Alg.](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241109) Relational Alg.
+
+
+[Practice Quiz 2 - Relational Algebra](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241147) focuses on relational modeling and relational algebra.
+
+<!-- deliverables-block-end -->
+
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
+
 
 
 ```{python}
