--- a/fa2025/details/week-5-details.qmd
+++ b/fa2025/details/week-5-details.qmd
@@ -28,8 +28,29 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 ```
 
 <p class="lead">Welcome to a new week!</p>
-
 *Details will be updated closer to the week.*
+
+<!-- overview-block-begin -->
+
+<p class="lead">Relational model and relational algebra.</p>
+    
+<!-- overview-block-end -->
+
+
+<!-- deliverables-block-begin -->
+#### Things to do this week
+
+
+[Homework 3 - Modeling Your World](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241135) more database specificiation practice.
+
+
+[Quiz 2 - Relational Algebra - Requires Respondus LockDown Browser + Webcam](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241122) focuses on relational modeling and relational algebra.
+
+<!-- deliverables-block-end -->
+
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
+
 
 
 ```{python}
