--- a/fa2025/details/week-8-details.qmd
+++ b/fa2025/details/week-8-details.qmd
@@ -28,8 +28,32 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 ```
 
 <p class="lead">Welcome to a new week!</p>
-
 *Details will be updated closer to the week.*
+
+<!-- overview-block-begin -->
+
+<p class="lead">Intro to SQL</p>
+    
+<!-- overview-block-end -->
+
+
+<!-- deliverables-block-begin -->
+#### Things to do this week
+
+
+[Homework 5 - Getting started with SQL](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241137) is all about getting the software installed and tested.  It's a big job!
+
+
+[Practice Quiz 4 - SQL Basics](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241149) is the practice quiz for SQL.
+
+
+[Quiz 4 - SQL Basics - Requires Respondus LockDown Browser + Webcam](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241130) focuses on basic SQL statements and structure.  This is the last quiz!!
+
+<!-- deliverables-block-end -->
+
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
+
 
 
 ```{python}
