--- a/fa2025/details/week-9-details.qmd
+++ b/fa2025/details/week-9-details.qmd
@@ -28,8 +28,26 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 ```
 
 <p class="lead">Welcome to a new week!</p>
-
 *Details will be updated closer to the week.*
+
+<!-- overview-block-begin -->
+
+<p class="lead">Review of homework 5, introduce and explore SELECT statements.</p>
+    
+<!-- overview-block-end -->
+
+
+<!-- deliverables-block-begin -->
+#### Things to do this week
+
+
+[Homework 6 - Constructing a database](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241138) creates a complete database for the first time!
+
+<!-- deliverables-block-end -->
+
+<!-- resources-block-begin -->
+<!-- resources-block-end -->
+
 
 
 ```{python}
